# jaday.io

./: .gitignore  Cargo.toml  README.MD  index.html  style.css
.github/actions/validate-crate/: action.yml
.github/workflows/: deploy.yml  pull-request.yml
_templates/: redirect.html
assets/favicon/: site.webmanifest
assets/fonts/: OFL-MrDeHaviland.txt
photography/: index.html  photography.css  photography.js
photography/justifiedGallery/: jquery.justifiedGallery.js
photography/photoswipe/: photoswipe-dynamic-caption-plugin.esm.js  photoswipe-lightbox.esm.js  photoswipe-video-plugin.esm.js
posts/blog/: combining-image-segmentation-and-seam-carving-for-automated-object-removal.html  k-d-tree.html  rust-firefox-shortcuts.html  spring-2018-code-a-thon-solutions.html
tools/bssg/: .gitignore  Cargo.toml
tools/bssg/src/: main.rs
tools/bssg/src/builder/: lazy_cache.rs  mod.rs
tools/bssg/src/builder/transformers/: handlebars.rs  mod.rs
tools/foto/: Cargo.toml
tools/foto/src/: cli.rs  config.rs  exif.rs  main.rs  model.rs  util.rs
www/: index.html
www/photography/: api.esm.js  dom.esm.js  index.html  photography.css  photography.js
www/photography/photoswipe/: photoswipe-dynamic-caption-plugin.css  photoswipe-dynamic-caption-plugin.esm.js  photoswipe.css  photoswipe.esm.js
