[package]
name = "bssg"
version = "0.0.0"
authors = ["Jeremy Day <self@jaday.io>"]
edition = "2021"
description = "A bespoke static site generator for jaday.io"

[dependencies]
handlebars = "6.0.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.128"
quick_cache = "0.6.6"
jstd = { git = "https://github.com/z2oh/jstd" }