[package]
name = "bssg"
version = "0.0.1"
authors = ["Jeremy Day <self@jaday.io>"]
edition = "2024"
description = "A bespoke static site generator for jaday.io"

[dependencies]
handlebars = "6"
notify = "8"
notify-debouncer-full = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
quick_cache = "0.6"

jstd = { git = "https://github.com/z2oh/jstd" }