[package]
name = "foto"
version = "0.0.1"
authors = ["Jeremy Day <self@jaday.io>"]
edition = "2024"
description = "Photo managing utility for jaday.io/photography"

[features]
default = ["gui"]
gui = ["dep:rfd"]

[dependencies]
image = "0.25"
inquire = "0.9"
rfd = { version = "0.17", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.2"
chrono = "0.4"
multimap = "0.10"
confy = "2.0"

jstd = { git = "https://github.com/z2oh/jstd" }